[gd_scene load_steps=8 format=2]

[ext_resource path="res://UI/TitleMenu.gd" type="Script" id=1]
[ext_resource path="res://Theme/GrayTransparent.tres" type="Theme" id=2]
[ext_resource path="res://Shader/StarNest.shader" type="Shader" id=3]
[ext_resource path="res://Font/m5x7.ttf" type="DynamicFontData" id=4]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 3 )
shader_param/iMouse = Vector2( 0, 0 )
shader_param/speed = 0.01

[sub_resource type="DynamicFont" id=2]
size = 96
outline_size = 1
outline_color = Color( 0.945098, 0, 1, 1 )
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 4 )

[node name="TitleMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BG" type="ColorRect" parent="."]
material = SubResource( 1 )
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0352941, 0.4, 0.411765, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 0.5
margin_bottom = -4.0
custom_fonts/font = SubResource( 2 )
text = "Spatial Maze"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.673
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -91.0
margin_top = 0.199982
margin_right = 93.0
margin_bottom = -6.0
custom_constants/separation = 16
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Continue" type="Button" parent="Menu"]
margin_right = 184.0
margin_bottom = 17.0
disabled = true
text = "continue"

[node name="New Game" type="Button" parent="Menu"]
margin_top = 33.0
margin_right = 184.0
margin_bottom = 50.0
text = "new_game"

[node name="Sandbox" type="Button" parent="Menu"]
margin_top = 66.0
margin_right = 184.0
margin_bottom = 83.0
text = "sandbox"

[node name="Option" type="Button" parent="Menu"]
margin_top = 99.0
margin_right = 184.0
margin_bottom = 116.0
text = "option"

[node name="Exit" type="Button" parent="Menu"]
margin_top = 132.0
margin_right = 184.0
margin_bottom = 149.0
text = "exit"

[node name="Label" type="Label" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -117.0
margin_top = -25.0
custom_fonts/font = SubResource( 3 )
text = "Present by Mimic Nix"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Menu/New Game" to="." method="_on_New_Game_pressed"]
[connection signal="pressed" from="Menu/Sandbox" to="." method="_on_Sandbox_pressed"]
[connection signal="pressed" from="Menu/Option" to="." method="_on_Option_pressed"]
[connection signal="pressed" from="Menu/Exit" to="." method="_on_Exit_pressed"]
